--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <h2 class="income__title">Income</h2>
 
                 <div class="income__list">
-
-                    {% comment %} <div class="item clearfix" id="income-0">
+                    <!--
+                    <div class="item clearfix" id="income-0">
                         <div class="item__description">Salary</div>
                         <div class="right clearfix">
                             <div class="item__value">+ 2,100.00</div>
@@ -76,7 +76,7 @@
                                 <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
                             </div>
                         </div>
-                    </div> {% endcomment %}
+                    </div> -->
                 </div>
             </div>
 
@@ -87,8 +87,8 @@
 
                 <div class="expenses__list">
 
-
-                    {% comment %} <div class="item clearfix" id="expense-0">
+                    <!--
+                    <div class="item clearfix" id="expense-0">
                         <div class="item__description">Apartment rent</div>
                         <div class="right clearfix">
                             <div class="item__value">- 900.00</div>
@@ -109,7 +109,7 @@
 
                             </div>
                         </div>
-                    </div> {% endcomment %}
+                    </div>-->
                 </div>
             </div>
         </div>
