--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top">
         <div class="budget">
             <div class="budget__title">
-                Available Budget In <span class="budget__title--month">%Month%</span>:
+                Available Budget In <span class="budget__title--month">%Month%</span>
             </div>
 
 
