--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         </div>
     </div>
     <script src="app.js"></script>
+	<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 
 </html>
